--- a/css/custom.css
+++ b/css/custom.css
@@ -143,3 +143,50 @@ body {
     line-height: 30px;
     color: #000000;
 }
+
+.divider {
+    position: relative;
+    height: 100px;
+    background-image: linear-gradient(#fff, #fff);
+    clip-path: polygon(0 0,
+            100% 0,
+            100% 100%,
+            0 calc(100% - 5vw));
+
+}
+
+.digitize-wrap {
+    background-color: #E5E5E5;
+}
+
+.digitize-title {
+    font-weight: 600;
+    font-size: 45px;
+    line-height: 61px;
+    text-align: center;
+    color: #000000;
+}
+
+.digitize-list-card {
+    margin: 0 10px 20px 10px;
+    text-align: center;
+    max-width: 428px;
+    max-height: 314px;
+    background: #FFFFFF;
+    border: 1px solid #2ECC71;
+    border-radius: 10px;
+}
+
+.digitize-list-card-title {
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 34px;
+    color: #000000;
+}
+
+.digitize-list-card-description {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #000000;
+}
